src/2_chatbot/yamls/v2/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-v2
  namespace: shinhan
spec:
  selector:
    app: app-v2
  ports:
  - protocol: TCP
    port: 8501
    targetPort: 8501
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-v2
  namespace: shinhan
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-v2
  template:
    metadata:
      labels:
        app: app-v2
    spec:
      containers:
      - name: app-v2
        image: registry.gocap.kr/shinhan/app:test-v2
        ports:
        - containerPort: 8501
