src/2_chatbot/yamls/v2/gw.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  annotations:
  name: shinhan-gateway-v2
  namespace: shinhan
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - v2.shinhan.dudaji.com
    port:
      name: http
      number: 80
      protocol: HTTP
  - hosts:
    - v2.shinhan.dudaji.com
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: shinhan-v2-tls
      mode: SIMPLE
